small change, use responsehandler